--- a/SmackdownEngine/SmackdownEngine.vcxproj.filters
+++ b/SmackdownEngine/SmackdownEngine.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClCompile Include="SmackdownEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SceneManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="SmackdownEngine.rc">
